...
            selectedIcon: Icon(Icons.memory),
            label: 'Saved',
          ),
          NavigationDestination(
            icon: Icon(Icons.workspaces_outlined),
            selectedIcon: Icon(Icons.workspaces),
            label: 'Groups',
          ),
          NavigationDestination(
            icon: Icon(Icons.wifi_find_outlined),
            selectedIcon: Icon(Icons.wifi_find),
            label: 'Wi-Fi',
          ),
...
